fix: Header alignment

--- a/public/main.css
+++ b/public/main.css
@@ -1,10 +1,17 @@
 :root {
-	--text-spacing: 0.8em;
+	--text-spacing: 0.8rem;
+}
+
+:root {
+	width: 100vw;
+	font-size: 16px;
 }
 
 body {
+	font-size: 1rem;
 	width: 100vw;
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: row;
 	justify-content: center;
 }
@@ -17,43 +24,62 @@ body i {
 	font-style: italic;
 }
 
-body > div#wrapper {
-	padding: 1vh 1vw;
+body div#wrapper {
+	padding: 1rem;
 	width: 100%;
 	max-width: 600px;
+	box-sizing: border-box;
 }
 
 body p {
 	margin-bottom: var(--text-spacing);
 }
 
-header > div {
+header {
+	width: 100%;
 	display: flex;
-	padding: 1em;
 	flex-direction: row;
-	gap: 1em;
+	padding: 1rem;
+	gap: 1rem;
+	box-sizing: border-box;
 }
 
-header > div h3 {
+header div {
+	flex-grow: none;
+	width: 100%;
+	max-width: 100px;
+	height: auto;
+	box-sizing: border-box;
+}
+
+header div img {
+	width: inherit;
+	height: auto;
+}
+
+header aside {
+	flex-grow: 1;
+	box-sizing: border-box;
+}
+
+header aside h3 {
 	font-weight: bold;
 	margin-bottom: var(--text-spacing);
 }
 
-header > div img {
-	width: 100px;
-	height: 100px;
-}
 
 nav {
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: row;
-	column-gap: 2em;
+	column-gap: 2rem;
 	justify-content: center;
-	width: 100%;
-	margin: 1em 0;
-	padding: 1em 0;
+	align-items: center;
+	margin: 1rem 0;
+	padding: 1rem;
 	border-top: 1px solid black;
 	border-bottom: 1px solid black;
+	gap: 1rem;
 }
 
 nav a {
@@ -74,19 +100,31 @@ nav a.disable {
 }
 
 section {
-	width: 100%;
-	padding: 1em;
+	padding: 1rem;
 }
 
 footer {
 	color: gray;
 	border-top: 1px solid black;
-	width: 100%;
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: row;
-	column-gap: 2em;
+	column-gap: 2rem;
 	justify-content: center;
-	margin: 1em 0;
-	padding: 1em 0;
-	font-size: 0.8em;
+	margin: 1rem 0;
+	padding: 1rem;
+	font-size: 0.8rem;
 }
+
+@media only screen and (max-width: 412px) {
+	header {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	header div {
+		width: 100%;
+		max-width: 200px;
+	}
+}
+	 
